src/styles/mdx.css
/* ... */
.mdx table {
  empty-cells: hide;
  @apply md:text-sm;
}

.mdx th {
  @apply px-4 pb-1 text-left font-semibold [&[align=center]]:text-center [&[align=right]]:text-right;
}

.mdx td {
  @apply border px-4 py-2 text-left align-text-top [&[align=center]]:text-center [&[align=right]]:text-right;
}

.mdx td:first-child {
  word-break: keep-all;
}

.mdx figure {
  overflow: hidden;
  border-radius: 6px;
}

.mdx img {
  display: flex;
  overflow: hidden;
  border-radius: 6px;
}

.mdx img + em,
.mdx img + em p,
.mdx figcaption {
  display: inline-block;
  margin-top: 8px;
  font-family: var(--font-sans);
  font-size: 0.9rem;
  font-style: normal;
  font-weight: 400;
  line-height: 20px;
  color: var(--astro-code-token-comment);
}

/* medium zoom */
.mdx img,
.medium-zoom-image--opened {
  filter: drop-shadow(0 25px 20px rgba(0, 0, 0, 0.1));
}

.medium-zoom-overlay,
.medium-zoom-image--opened {
  z-index: 1000;
}

/* code block */
.mdx code:not(pre code),
.astro-code .highlighted-word {
  position: relative;
  display: inline;
  padding: 1px 1px;
  margin: -1px -1px;
  font-size: 0.9rem;
  font-weight: 600;
  color: var(--astro-code-foreground);
  background-color: var(--selection);
  border: 1px solid var(--selection);
  border-radius: 4px;
}

pre.astro-code {
  --astro-code-px: 24px;
  --astro-code-py: 20px;
  position: relative;
  display: grid;
  padding: var(--astro-code-py) var(--astro-code-px);
  overflow-x: auto;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.5;
  color: var(--astro-code-foreground);
  -moz-tab-size: 2;
  -o-tab-size: 2;
  tab-size: 2;
  background-color: var(--astro-code-background);
  border-radius: 8px;
}

pre.astro-code code {
  position: relative;
}

/* shiki transformer */
.astro-code .highlighted,
.astro-code .diff {
  display: inline-block;
  width: calc(100% + 2 * var(--astro-code-px));
  padding: 0 var(--astro-code-px);
  margin: 0 calc(-1 * var(--astro-code-px));
  transition: background-color 0.5s;
}
.astro-code .highlighted {
  background-color: var(--selection);
}
.astro-code .highlighted.error {
  background-color: var(--vp-code-line-error-color);
}
.astro-code .highlighted.warning {
  background-color: var(--vp-code-line-warning-color);
}
.astro-code .diff:before {
  position: absolute;
  left: -16px;
  user-select: none;
}
.astro-code .diff.remove {
  background-color: var(--vp-code-line-diff-remove-color);
  opacity: 0.7;
}
.astro-code .diff.remove:before {
  color: var(--vp-code-line-diff-remove-symbol-color);
  content: '-';
}
.astro-code .diff.add {
  background-color: var(--vp-code-line-diff-add-color);
}
.astro-code .diff.add:before {
  color: var(--vp-code-line-diff-add-symbol-color);
  content: '+';
}

.astro-code.has-focused .line:not(.focused) {
  filter: blur(0.095rem);
  opacity: 0.7;
  transition:
    filter 0.35s,
    opacity 0.35s;
}
.astro-code.has-focused:hover .line:not(.has-focus) {
  filter: blur(0);
  opacity: 1;
}

.astro-code .twoslash-popup-container {
  position: fixed;
  z-index: 10;
  width: max-content;
  max-width: var(--content-width);
  white-space: normal;
}

[data-code-fragment] [data-code-title] {
  margin-bottom: 0.25rem;
  font-size: 0.9rem;
  color: var(--astro-code-token-comment);
}

[data-code-fragment] [data-code-caption] {
  margin-top: 0.25rem;
  font-size: 0.9rem;
  color: var(--astro-code-token-comment);
}

[data-code-fragment] span.lang {
  position: absolute;
  top: 2px;
  right: 8px;
  z-index: 2;
  font-size: 0.75rem;
  font-weight: 500;
  color: var(--astro-code-token-comment);
  transition:
    color 0.4s,
    opacity 0.4s;
}

.astro-code.has-line-numbers {
  padding-left: calc(var(--astro-code-px) + 2rem);
}
.astro-code .line-numbers {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 3;
  display: grid;
  width: 2rem;
  padding: var(--astro-code-py) 0;
  color: #888;
  text-align: center;
  border-right: 1px solid var(--border);
}

/* copy-code */
:root {
  --copy-icon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 24 24'%3E%3Cg fill='none' stroke='%238f8f8f' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' color='%23888888'%3E%3Cpath d='M9 15c0-2.828 0-4.243.879-5.121C10.757 9 12.172 9 15 9h1c2.828 0 4.243 0 5.121.879C22 10.757 22 12.172 22 15v1c0 2.828 0 4.243-.879 5.121C20.243 22 18.828 22 16 22h-1c-2.828 0-4.243 0-5.121-.879C9 20.243 9 18.828 9 16z'/%3E%3Cpath d='M17 9c-.003-2.957-.047-4.489-.908-5.538a4 4 0 0 0-.554-.554C14.43 2 12.788 2 9.5 2c-3.287 0-4.931 0-6.038.908a4 4 0 0 0-.554.554C2 4.57 2 6.212 2 9.5c0 3.287 0 4.931.908 6.038a4 4 0 0 0 .554.554c1.05.86 2.58.906 5.538.908'/%3E%3C/g%3E%3C/svg%3E");
  --copied-icon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 24 24'%3E%3Cpath fill='%238f8f8f' d='m9.55 15.15l8.475-8.475q.3-.3.7-.3t.7.3t.3.713t-.3.712l-9.175 9.2q-.3.3-.7.3t-.7-.3L4.55 13q-.3-.3-.288-.712t.313-.713t.713-.3t.712.3z'/%3E%3C/svg%3E");
}
/* ... */

